--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,13 @@
 "name": "JIRA Description Templates",
 "version": "0.1.0",
 "description": "When creating a new issue in JIRA this extention will automatically populate the description field with a template relevant to the issue type.",
+"browser_action": {
+    "default_popup": "popup.html"
+  },
+"background": {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  },
 "content_scripts": [
     {
         "matches": [
@@ -14,8 +21,8 @@
         ],
         "run_at": "document_end"
     }
-],
+  ],
 "permissions":[
     "storage"
-]
+  ]
 }
