--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,36 @@
 {
-"manifest_version": 2,
-"name": "JIRA Description Templates",
-"version": "0.1.0",
-"description": "When creating a new issue in JIRA this extention will automatically populate the description field with a template relevant to the issue type.",
-"browser_action": {
-    "default_popup": "popup.html"
-  },
-"background": {
-    "scripts": ["resources/js/jquery-2.2.2.min.js", "eventPage.js"],
-    "persistent": false
-  },
-"content_scripts": [
-    {
-        "matches": [
-            "http://redbrickmedia.atlassian.net/*",
-            "https://redbrickmedia.atlassian.net/*"
-        ],
-        "js": [
-            "resources/js/jquery-2.2.2.min.js",
-            "template.js"
-        ],
-        "run_at": "document_end"
-    }
-  ],
-"permissions":[
-    "storage",
-    "*://*/*.json",
-    "file:///*.json"
-  ]
+    "manifest_version": 2,
+    "name": "JIRA Description Template Injector",
+    "version": "0.1.0",
+    "description": "When creating a new issue in JIRA this extention will automatically populate the description field with a template relevant to the issue type.",
+    "icons": {
+        "16": "resources/images/icons/RB-icon-16.png",
+        "48": "resources/images/icons/RB-icon-48.png",
+        "128": "resources/images/icons/RB-icon-128.png"
+    },
+    "browser_action": {
+        "default_popup": "popup.html"
+    },
+    "background": {
+        "scripts": ["resources/js/jquery-2.2.2.min.js", "eventPage.js"],
+        "persistent": false
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "http://redbrickmedia.atlassian.net/*",
+                "https://redbrickmedia.atlassian.net/*"
+            ],
+            "js": [
+                "resources/js/jquery-2.2.2.min.js",
+                "templateInjector.js"
+            ],
+            "run_at": "document_end"
+        }
+    ],
+    "permissions":[
+        "storage",
+        "*://*/*.json",
+        "file:///*.json"
+    ]
 }
