--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "JIRA Description Template Injector",
     "version": "0.1.0",
-    "description": "When creating a new issue in JIRA this extention will automatically populate the description field with a template relevant to the issue type.",
+    "description": "When creating a new issue in JIRA this extension will automatically populate the description field with a template relevant to the issue type.",
     "icons": {
         "16": "resources/images/icons/RB-icon-16.png",
         "48": "resources/images/icons/RB-icon-48.png",
