--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
     "version": "0.1.0",
     "description": "When creating a new issue in JIRA this extension will automatically populate the description field with a template relevant to the issue type.",
     "icons": {
-        "16": "resources/images/icons/icon-red-16.png",
-        "48": "resources/images/icons/icon-red-48.png",
-        "128": "resources/images/icons/icon-red-128.png"
+        "16": "images/icon-red-16.png",
+        "48": "images/icon-red-48.png",
+        "128": "images/icon-red-128.png"
     },
     "browser_action": {
         "default_popup": "html/popup.html"
