--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "JIRA Template Injector",
     "version": "0.1.0",
-    "description": "When creating a new issue in JIRA this extension will automatically populate the description field with a template relevant to the issue type.",
+    "description": "The description field of new issues created in JIRA will automatically be populated a template relevant to the issue type",
     "icons": {
         "16": "images/icon-red-16.png",
         "48": "images/icon-red-48.png",
