--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "JIRA Template Injector",
-    "short_name": "JTI"
+    "short_name": "JTI",
     "version": "0.1.6",
     "description": "The description field of new JIRA issues will automatically be populated with a template relevant to the issue type",
     "icons": {
