--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,7 @@
   },
   "background": {
     "scripts": [
-      "lib/deskmetrics/deskmetrics.js",
+      "lib/deskmetrics/deskmetrics-2.1.0.js",
       "lib/jquery/jquery-2.2.3.js",
       "jti_background.js"
     ],
