--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A browser extension that automatically populates a JIRA issue's description field with a predefined template based on issue type.",
   "scripts": {
     "test": "echo \"Error: no test specified.\" && exit 1",
+    "lint": "eslint src/js/** src/jti_*",
     "clean": "rm -f jti.crx jti.zip",
     "bump": "versiony src/manifest.json --patch",
     "pack": "crx pack src -o jti.crx --zip-output jti.zip",
-    "build": "npm run pack",
+    "build": "npm run lint && npm run pack",
     "rebuild": "npm run clean && npm run build"
   },
   "repository": {
@@ -27,6 +28,10 @@
   },
   "devDependencies": {
     "crx": "^3.0.3",
+    "eslint": "^2.13.1",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-standard": "^1.3.2",
     "json": "^9.0.4",
     "versiony-cli": "^1.3.0"
   }
