Ext 564 reload tabs on install

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -43,6 +43,7 @@
     ],
     "permissions": [
         "storage",
+        "tabs",
         "*://*/*.json",
         "https://*.pingstatsnet.com/"
     ]
