--- a/src/manifest.json
+++ b/src/manifest.json
@@ -41,6 +41,9 @@
             "run_at": "document_end"
         }
     ],
+    "sandbox": {
+        "pages": ["html/sandbox.html"]
+    },
     "permissions": [
         "storage",
         "tabs",
