Ext 612 assign templates to projects (#31)
* EXT 612 Add support for specifying projects for templates

* EXT 612 Add Projects field to template edit UI

* EXT 612 Fix logic to check if template already exists for a given project

* EXT 612 Add support for editing name, issue type and projects (not just text)

* EXT 612 Refactor templates to be saved with a hash as key instead of the template name

* Add templates with same name to test file

* EXT 612 Change template data format to support templates with same name

* Delete test files

* Update readme

* EXT 612 Use template for collapsible template editor and fix default template dropdown

* Fix indentation

* Create a class for bold font

* Create a utils file for common functions

* Fix wrongly named variable

* Fix comment

* Fix lint

* EXT 612 Add project, no issue type to override order

* New lines

* EXT 612 Add validation cases for default template and same project, no issue

* EXT 612 Optimize template override logic

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,6 +24,7 @@
         "scripts": [
             "lib/deskmetrics/deskmetrics-2.2.0.js",
             "lib/jquery/jquery-2.2.3.js",
+            "js/utils.js",
             "jti_background.js"
         ],
         "persistent": false
@@ -36,11 +37,15 @@
             ],
             "js": [
                 "lib/jquery/jquery-2.2.3.js",
+                "js/utils.js",
                 "jti_content.js"
             ],
             "run_at": "document_end"
         }
     ],
+    "sandbox": {
+        "pages": ["html/sandbox.html"]
+    },
     "permissions": [
         "storage",
         "tabs",
