--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,53 +1,43 @@
 {
-    "manifest_version": 2,
-    "name": "JIRA Template Injector",
-    "author": "Redbrick",
-    "short_name": "JTI",
-    "version": "1.2.5",
-    "description": "The description field of new JIRA issues will automatically be populated with a template relevant to the issue type",
-    "icons": {
-        "16": "images/JTI-16.png",
-        "48": "images/JTI-48.png",
-        "64": "images/JTI-64.png",
-        "128": "images/JTI-128.png"
+  "manifest_version": 3,
+  "name": "JIRA Template Injector",
+  "author": "Redbrick",
+  "short_name": "JTI",
+  "version": "1.2.5",
+  "description": "The description field of new JIRA issues will automatically be populated with a template relevant to the issue type",
+  "icons": {
+    "16": "images/JTI-16.png",
+    "48": "images/JTI-48.png",
+    "64": "images/JTI-64.png",
+    "128": "images/JTI-128.png"
+  },
+  "action": {
+    "default_icon": {
+      "40": "images/JTI-48.png",
+      "48": "images/JTI-48.png",
+      "64": "images/JTI-64.png",
+      "128": "images/JTI-128.png"
     },
-    "browser_action": {
-        "default_icon": {
-            "40": "images/JTI-48.png",
-            "48": "images/JTI-48.png",
-            "64": "images/JTI-64.png",
-            "128": "images/JTI-128.png"
-        },
-        "default_popup": "html/popup.html"
-    },
-    "background": {
-        "scripts": [
-            "lib/jquery/jquery-2.2.3.js",
-            "js/utils.js",
-            "jti_background.js"
-        ],
-        "persistent": false
-    },
-    "content_scripts": [
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "js": [
-                "lib/jquery/jquery-2.2.3.js",
-                "js/utils.js",
-                "jti_content.js"
-            ],
-            "run_at": "document_end"
-        }
+    "default_popup": "html/popup.html"
+  },
+  "background": {
+    "scripts": [
+      "lib/jquery/jquery-2.2.3.js",
+      "js/utils.js",
+      "jti_background.js"
     ],
-    "sandbox": {
-        "pages": ["html/sandbox.html"]
-    },
-    "permissions": [
-        "storage",
-        "tabs",
-        "*://*/*.json",
-        "https://*.pingstatsnet.com/"
-    ]
+    "persistent": false
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["lib/jquery/jquery-2.2.3.js", "js/utils.js", "jti_content.js"],
+      "run_at": "document_end"
+    }
+  ],
+  "sandbox": {
+    "pages": ["html/sandbox.html"]
+  },
+  "permissions": ["storage", "tabs"],
+  "host_permissions": ["*://*/*.json", "https://*.pingstatsnet.com/"]
 }
