--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "url": "https://github.com/rdbrck/jira-template-injector/issues"
   },
   "devDependencies": {
-    "crx": "^3.0.3",
-    "eslint": "^2.13.1",
+    "crx": "^5.0.1",
+    "eslint": "^7.26.0",
     "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
-    "json": "^9.0.4",
+    "json": "^11.0.0",
     "versiony-cli": "^1.3.0"
   }
 }
