Revert "hwk: remove host perms and JSON-from-url field"
This reverts commit e48416bdd8f2570d1d51e7a01e86813988d12643.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -38,5 +38,10 @@
   "sandbox": {
     "pages": ["html/sandbox.html"]
   },
-  "permissions": ["storage", "tabs"]
+  "permissions": [
+    "storage",
+    "tabs",
+    "*://*/*.json",
+    "https://*.pingstatsnet.com/"
+  ]
 }
